--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head id="#" >
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Complete Website Layout</title>
@@ -18,7 +18,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><img src="img/logo6.jpg"></a>
+		<!-- <a href="#">Test</a> -->
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -28,16 +28,16 @@
 					<a class="nav-link" href="#">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
+					<a class="nav-link" href="#About">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Services</a>
+					<a class="nav-link" href="#Experience">Experience</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Team</a>
+					<a class="nav-link" href="#Skills">Skills</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Connect</a>
+					<a class="nav-link" href="#connect">Connect</a>
 				</li>
 			</ul>
 		</div>
@@ -45,7 +45,7 @@
 </nav>
 
 <!--- Image Slider -->
-<div id="slides" class="carousel slide" data-ride="carousel" data-aos="fade-up"
+<!-- <div id="slides" class="carousel slide" data-ride="carousel" data-aos="fade-up"
 		data-aos-offset="200"
 		data-aos-delay="50"
 		data-aos-duration="1000">
@@ -58,11 +58,7 @@
 		<div class="carousel-item active">
 			<img class="image" src="img/background.png">
 			<div class="carousel-caption">
-				<h1 class="display-2">Website</h1>
-				<h3>Complete Website Layout</h3>
-				<button type="button" class="btn btn-outline-light btn-lg">VIEW
-				DEMO</button>
-				<button type="button" class="btn btn-primary btn-lg">Get Started</button>
+
 			</div>
 		</div>
 		<div class="carousel-item">
@@ -72,28 +68,109 @@
 			<img class="image" src="img/background3.png">
 		</div>
 	</div>
-</div>
+</div> -->
+
 
 <!--- Jumbotron -->
-<div class="container-fluid" data-aos="fade-up"
+<!-- <div class="container-fluid" data-aos="fade-up"
 		data-aos-offset="200"
 		data-aos-delay="50"
 		data-aos-duration="1000">
 	<div class="row jumbotron">
 		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-			<p class="lead">A web hosting service allows individuals and
-				organizations to make their website accessible via the World
-				Wide Web.</p>
+			<p class="lead">Welcome to my websit.</p>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
 			<a href="#"><button type="button" class="btn btn-outline-secondary
 			btn-lg">Web Hosting</button></a>
 		</div>
 	</div>
+</div> -->
+
+<!--- Two Column Section -->
+<div class="container-fluid padding"data-aos="fade-up"
+		data-aos-offset="200"
+		data-aos-delay="50"
+		data-aos-duration="1000">
+	<div class="row padding">
+		<div class="col-md-12 col-lg-6">
+			<h2>If you build it...</h2>
+			<p>The columns will automatically stack on each other when
+				the screen is less than 576px wide.</p>
+			<p>Resize the browserwindow to see the effect. Responsive web
+				design has become more important as the amount of mobile traffic now
+				accounts for more than half of total internet traffic.</p>
+			<p>It can also display the web page differently depending on the
+				screen size or viewing device.</p>
+				<br>
+				<a href="#" class="btn btn-primary">Learn More</a>
+		</div>
+		<div class="col-lg-6">
+			<img src="img/desk.png" class="img-fluid">
+		</div>
+	</div>
 </div>
 
+<hr class="my-4">
+
+
+
+
+<!--- Meet the team -->
+<div id="Experience" class="container-fluid padding">
+	<div class="row welcome text-center">
+		<div class="col-12">
+			<h1 class="display-4">Experience / Projects </h1>
+		</div>
+	</div>
+</div>
+
+<!--- Cards -->
+<div class="container-fluid padding" data-aos="fade-up"
+		data-aos-offset="200"
+		data-aos-delay="50"
+		data-aos-duration="1000">
+	<div class="row padding">
+		<div class="col-md-4">
+			<div class="card">
+				<img class="card-img-top" src="img/team1.png">
+				<div class="card-body">
+					<h4 class="card-title">Cannon Design</h4>
+					<p class="card-text">Fill in experience details.
+					</p>
+					<a href="#" class="btn btn-outline-secondary">See Profile</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="card">
+				<img class="card-img-top" src="img/team2.png">
+				<div class="card-body">
+					<h4 class="card-title">Ingram Micro</h4>
+					<h6 class="card-title1">Data Engineering Intern</h6>
+					<p class="card-text">Mary is a designer with a almost 10 years
+					of digital design experience.</p>
+					<a href="#" class="btn btn-outline-secondary">See Profile</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="card">
+				<img class="card-img-top" src="img/team3.png">
+				<div class="card-body">
+					<h4 class="card-title">Phil Ho</h4>
+					<p class="card-text">Phil is an developer with over 5 years
+					of web development experience.</p>
+					<a href="#" class="btn btn-outline-secondary">See Profile</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
 <!--- Welcome Section -->
-<div class="container-fluid padding"data-aos="fade-up"
+<div id="Skills" class="container-fluid padding"data-aos="fade-up"
 		data-aos-offset="200"
 		data-aos-delay="50"
 		data-aos-duration="1000">
@@ -102,6 +179,7 @@
 			<h1 class="display-4">Built with ease.</h1>
 		</div>
 		<hr>
+        <a href="example_stuff"></a>
 		<div class="col-12">
 			<p class="lead">Welcome to my website tutorial!
 				Bootstrap is a free and open-source front-end library with HTML and
@@ -135,86 +213,9 @@
 	<hr class="my-4">
 </div>
 
-<!--- Two Column Section -->
-<div class="container-fluid padding"data-aos="fade-up"
-		data-aos-offset="200"
-		data-aos-delay="50"
-		data-aos-duration="1000">
-	<div class="row padding">
-		<div class="col-md-12 col-lg-6">
-			<h2>If you build it...</h2>
-			<p>The columns will automatically stack on each other when
-				the screen is less than 576px wide.</p>
-			<p>Resize the browserwindow to see the effect. Responsive web
-				design has become more important as the amount of mobile traffic now
-				accounts for more than half of total internet traffic.</p>
-			<p>It can also display the web page differently depending on the
-				screen size or viewing device.</p>
-				<br>
-				<a href="#" class="btn btn-primary">Learn More</a>
-		</div>
-		<div class="col-lg-6">
-			<img src="img/desk.png" class="img-fluid">
-		</div>
-	</div>
-</div>
-
-<hr class="my-4">
-
-
-<!--- Meet the team -->
-<div class="container-fluid padding">
-	<div class="row welcome text-center">
-		<div class="col-12">
-			<h1 class="display-4">Meet the Team </h1>
-		</div>
-	</div>
-</div>
-
-<!--- Cards -->
-<div class="container-fluid padding" data-aos="fade-up"
-		data-aos-offset="200"
-		data-aos-delay="50"
-		data-aos-duration="1000">
-	<div class="row padding">
-		<div class="col-md-4">
-			<div class="card">
-				<img class="card-img-top" src="img/team1.png">
-				<div class="card-body">
-					<h4 class="card-title">John Doe</h4>
-					<p class="card-text">John is an Interent
-						entrepreneur with almost 20 years of experience.
-					</p>
-					<a href="#" class="btn btn-outline-secondary">See Profile</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="card">
-				<img class="card-img-top" src="img/team2.png">
-				<div class="card-body">
-					<h4 class="card-title">Mary Jo</h4>
-					<p class="card-text">Mary is a designer with a almost 10 years
-					of digital design experience.</p>
-					<a href="#" class="btn btn-outline-secondary">See Profile</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="card">
-				<img class="card-img-top" src="img/team3.png">
-				<div class="card-body">
-					<h4 class="card-title">Phil Ho</h4>
-					<p class="card-text">Phil is an developer with over 5 years
-					of web development experience.</p>
-					<a href="#" class="btn btn-outline-secondary">See Profile</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
 
 <!--- Two Column Section -->
+<!-- 
 <div class="container-fluid padding" data-aos="fade-up"
 		data-aos-offset="200"
 		data-aos-delay="50"
@@ -238,12 +239,13 @@
 		</div>
 	</div>
 	<hr class="my-4">
-</div>
+</div> -->
+
 
 <!--- Connect -->
 <div class="container-fluid padding">
 	<div class="row text-center padding">
-		<div class="col-12">
+		<div id="connect" class="col-12">
 			<h2>Connect</h2>
 		</div>
 		<div class="col-12 social padding">
@@ -257,7 +259,7 @@
 </div>
 
 <!--- Footer -->
-<footer>
+<!-- <footer>
 	<div class="container-fluid padding" data-aos="fade-up"
 		data-aos-offset="200"
 		data-aos-delay="50"
@@ -295,7 +297,7 @@
 			</div>
 		</div>
 	</div>
-</footer>
+</footer> -->
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
